@@ -149,3 +149,5 @@ issue 247:
     bug: blocks get hidden when updated [whole world] leading into big lag
     properly caused by a face-miss-calculation in the new rendering parts
     since: development of 21w01a
+
+[248]
